--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,18 +1,82 @@
-.navbar {
+.Navbar {
 
     width: 100%;
     height: 100px;
-    background-color: rgba(23, 66, 66, 0.864);
+    background-color:#EDF6F9;
     display: flex;
     flex-direction: row;
-    font-family: 'Poppins', sans-serif;
-    font-size: large;
+    font-family: 'Roboto';
+    font-size: 12px;
     border-bottom: rgba(0, 0, 0, 0.098) solid 1px;
     
 
 }
-.navbar  .rightSide:hover{
-    background-color: rgba(0, 0, 0, 0.25);
-    cursor: pointer;
-    transition: 0.4s ease-out;
+
+
+
+.Navbar .rightSide {
+
+    flex: 350%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-left: 700px;
+   
+
+
+
 }
+
+.Navbar .a {
+
+    color: #333333;
+    font-family: 'Roboto';
+    font-size: 12px;
+    padding: 10px;
+    text-decoration: none;
+    font-weight: 400;
+    margin: 40px;
+   
+   
+   }
+
+
+.Navbar ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px ;
+    
+ 
+ }
+  
+ 
+ .Navbar ul li a{
+ 
+  color: #333333;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
+ }
+ 
+ .Navbar ul li a::after{
+ 
+   content: '';
+   width: 0;
+   height: 1px;
+   background:#333333;
+   position: absolute;
+   left: 0;
+   bottom: -1.8px;
+   transition: 0.6s;
+   
+ }
+
+  
+
+ 
+ .Navbar ul li a:hover::after{
+  width: 100%;
+ 
+ 
+ }
+ 
