--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -1,38 +1,40 @@
 
 * {
     margin: 0;
+    padding: 0; 
+    box-sizing: border-box; 
 }
 body {
     background: pink;
 }
 
 .homepage {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column; 
     align-items: center;
-    flex-direction: column;
+    width: 100%; 
     font-family: 'Poppins', sans-serif;
-    text-align: center;
-    overflow: hidden;
     background: red;
+}
+
+.top-section {
+    display: flex;
+    width: 100%; 
+    justify-content: space-between; 
+    align-items: flex-start; 
 }
 
 /* NAME SECTION */
 
 .name-section {
-    height: 277px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: start;
+    align-items: flex-start;
+    margin-left: 15%;
+    margin-top: 20%;
     font-size: 64px;
-    margin-right: 50%;
     background: orange;
-    
 }
 
 .name-section h1 {
@@ -40,24 +42,28 @@ body {
 }
 
 .name-section h2 {
-    color: #83C5BE;
+    color: #83C5BE; 
 }
 
 /* GALLERY SECTION */
 
 .gallery-section {
-    background: green;
-    width: 20%;
-    height: 100px;
+    width: 50%;
+    position: relative; 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
+    align-items: center; 
 }
 
+.sample-image {
+    width: 100%; 
+    height: auto; 
+    object-fit: contain;
+}
 /* ABOUT SECTION */
 
 .about-section {
-    width: 20%;
+    width: 10%;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -68,7 +74,7 @@ body {
 /* FINDME SECTION */
 
 .findme-section {
-    width: 20%;
+    width: 10%;
     height: 100px;
     display: flex;
     flex-direction: column;
@@ -81,11 +87,10 @@ body {
 /* BOOKING SECTION */
 
 .booking-section {
-    width: 20%;
+    width: 10%;
     height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background: yellow;
-
 }
