about section layout

--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -80,34 +80,46 @@ body {
 /* ABOUT SECTION */
 
 .about-section {
-    position: relative; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 70%;
     height: 465px;
-    position: relative; 
     margin-top: 10%; 
     background: blue;
 
 }
 
-.about-section h1 {
-    margin-bottom: 20px; 
-    font-size: 3rem; 
-    color: #006D77; 
-    text-align: left
 
+.image-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 465px;
+    margin-right: 20%;
+    
 }
 
-.about-section p {
-    text-align: justify; 
-    text-justify: inter-word; 
-    line-height: 1.6; 
-    font-size: 1rem;
+.image-container img {
+    width: 20%;
+}
+
+.about-text {
+    max-width: 50%; 
+    text-align: left; 
+    margin-right: 1%;
+    font-size: 18px;
+    letter-spacing: 1.5px;
+}
+
+.about-text h1 {
+    font-size: 64px;
+    margin-bottom: 20px;
+    color: #83C5BE;
 }
 
 #btn-about {
-    position: absolute;
-    bottom: 0px;
-    right: 0px; 
     padding: 10px 20px;
     background: white; 
     color: black; 
@@ -115,8 +127,9 @@ body {
     cursor: pointer;
     font-size: 15px;
     letter-spacing: 1.5px;
-    
+    margin-top: 40px;
 }
+
 
 /* FINDME SECTION */
 
