--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     width: 100%; 
     font-family: 'Poppins', sans-serif;
-    background: red;
+    background: #EDF6F9;
 }
 
 .top-section {
@@ -37,7 +37,8 @@ body {
     margin-top: 20%;
     font-size: 64px;
     background: orange;
-    letter-spacing: 1.5px;
+    letter-spacing: 7px;
+    line-height: 5.5rem;
 }
 
 .name-section h1 {
@@ -59,9 +60,10 @@ body {
 }
 
 .sample-image {
-    width: 100%; 
+    width: 90%; 
     height: auto; 
     object-fit: contain;
+    margin-right: 10%;
 }
 
 #btn-gallery {
@@ -134,35 +136,38 @@ body {
 
 /* FINDME SECTION */
 .findme-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    position: relative;
     margin-top: 20%; 
     width: 70%;
+    height: 465px;
     padding: 50px 10%; 
     background: #EFF6EE; 
-    position: relative; 
+    overflow: hidden;
     background: magenta;
-  }
+}
   
   .findme-content {
-    max-width: 50%; 
+    position: absolute;
+    top: 0;
+    left: 10%;
+    z-index: 2;
     text-align: left; 
-  }
+    color: white;
+}
   
   .findme-content h1 {
     font-size: 64px;
     color: #006D77; 
-    margin-bottom: 20px; 
-  }
+   
+}
   
-  .findme-content p {
+  .findme-content h2 {
     text-align: left; 
-    font-size: 18px;
     letter-spacing: 1.5px;
-  }
+}
   
   #btn-findme {
+    z-index: 2;
     padding: 10px 20px;
     background: white; 
     color: black; 
@@ -170,8 +175,36 @@ body {
     cursor: pointer;
     font-size: 15px;
     letter-spacing: 1.5px;
-    margin-top: 40px;
-  }
+    bottom: 20px; 
+    left: 10%;
+}
+
+.map-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+    z-index: 1; 
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    -webkit-filter: grayscale(100%);
+}
+
+.map-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 109, 119, 0.5); 
+    z-index: 1;
+}
+
   
 
 /* BOOKING SECTION */
