--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -79,4 +79,17 @@
  
  
  }
+ .Navbar ul li .book{
+
+    color: #006D77;
+ }
  
+
+ .rightSide img{
+
+  
+  width: 10%;
+  height: 10%;
+  margin-right: 200px;
+
+ }
