--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -26,7 +26,7 @@ body {
     align-items: flex-start; 
 }
 
-/* NAME SECTION */
+/* NAME SECTION */ 
 
 .name-section {
     display: flex;
@@ -36,7 +36,6 @@ body {
     margin-left: 15%;
     margin-top: 20%;
     font-size: 64px;
-    background: orange;
     letter-spacing: 7px;
     line-height: 5.5rem;
 }
@@ -130,61 +129,63 @@ body {
     cursor: pointer;
     font-size: 15px;
     letter-spacing: 1.5px;
-    margin-top: 40px;
+    margin-top: 30px;
 }
 
 
 /* FINDME SECTION */
+
 .findme-section {
     position: relative;
-    margin-top: 20%; 
-    width: 70%;
-    height: 465px;
-    padding: 50px 10%; 
-    background: #EFF6EE; 
-    overflow: hidden;
-    background: magenta;
+    margin-top: 20%;
+    width: 70%; 
+    height: auto;
+    background: #EFF6EE;    
 }
-  
-  .findme-content {
+
+.findme-header {
+    text-align: left;
+    width: 100%; 
+    
+}
+
+.findme-header h1 {
+    font-size: 64px;
+    color: #006D77; 
+    margin-left: 10px;
+}
+
+.findme-content {
     position: absolute;
-    top: 0;
-    left: 10%;
-    z-index: 2;
-    text-align: left; 
+    left: 5%; 
+    top: 25%;
+    z-index: 2; 
     color: white;
 }
   
-  .findme-content h1 {
-    font-size: 64px;
-    color: #006D77; 
-   
+.findme-content h1 {
+    font-size: 64px; 
+
 }
   
-  .findme-content h2 {
-    text-align: left; 
-    letter-spacing: 1.5px;
-}
-  
-  #btn-findme {
-    z-index: 2;
+#btn-findme {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
     padding: 10px 20px;
     background: white; 
     color: black; 
     border: none;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 17px;
     letter-spacing: 1.5px;
-    bottom: 20px; 
-    left: 10%;
 }
 
 .map-container {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: relative;
     width: 100%;
-    height: 100%; 
+    height: 465px; 
     z-index: 1; 
 }
 
@@ -192,7 +193,7 @@ iframe {
     width: 100%;
     height: 100%;
     border: none;
-    -webkit-filter: grayscale(100%);
+    filter: invert(100%) grayscale(100%);
 }
 
 .map-overlay {
@@ -202,7 +203,8 @@ iframe {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 109, 119, 0.5); 
-    z-index: 1;
+    z-index: 2;
+
 }
 
   
@@ -215,6 +217,6 @@ iframe {
     justify-content: center;
     width: 70%;
     height: 465px;
-    margin-top: 10%; 
+    margin-top: 40%; 
     background: yellow;
 }
