--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -60,13 +60,15 @@
 }
 
 .flagImages {
- background-color: blue;
+ background-color: rgb(78, 78, 165);
  width: 200px;
  position: absolute;
-
+ margin-right: 10%;
 }
 
 .flagImages img{
   height: 15px;
-  width: 15px;
+  width: 25px;
+  opacity: 0.5;
+  
 }
