--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -63,7 +63,7 @@
 }
 
 .flagImages {
- background-color: rgb(254, 254, 254);
+ background-color: #edf6f9;
  width: 200px;
  position: absolute;
  margin-right: 20%;
@@ -77,3 +77,4 @@
   width: 25px;
   opacity: 0.4;
 }
+
