--- a/src/styles/pages/Aboutpage.css
+++ b/src/styles/pages/Aboutpage.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #EDF6F9; /* Off White */
+    background: #EDF6F9;
     color: #333333; 
   }
   
